--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<md-toolbar>NgShop</md-toolbar>
+<md-toolbar>
+  <span class="fill"></span>
+  <img class="logo" src="assets/ngshop-logo.svg" alt="NgShop Logo">
+  <span class="fill"></span>
+</md-toolbar>
