--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,5 @@
   <img class="logo" src="assets/ngshop-logo.svg" alt="NgShop Logo">
   <span class="fill"></span>
 </md-toolbar>
+
+<ngs-home></ngs-home>
