--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles/palette';
+
 :host {
   display: block;
   background: #f3f3f3;
@@ -5,4 +7,8 @@
 
 .grid-list-container {
   padding: 16px;
+}
+
+md-tab-group {
+  background: mat-color($ngs-background, card);
 }
