--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <md-toolbar>
   <span class="fill"></span>
-  <img class="logo" src="assets/ngshop-logo.svg" alt="NgShop Logo">
+  <a routerLink="/">
+    <img class="logo" src="assets/ngshop-logo.svg" alt="NgShop Logo">
+  </a>
   <span class="fill"></span>
 </md-toolbar>
 
