Add form support to the shopping cart page

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,4 +1,6 @@
-<div class="content">
+<div class="content"
+     [formGroup]="formModel">
+
   <div class="cart-item" *ngFor="let p of products">
 
     <div class="cart-item-image">
@@ -11,7 +13,10 @@
 
     <div class="cart-item-quantity">
       <md-input-container>
-        <input mdInput placeholder="Quantity" [value]="quantity[p.id]">
+        <input mdInput
+               type="number" min="0"
+               placeholder="Quantity"
+               [formControlName]="p.id">
       </md-input-container>
     </div>
 
@@ -29,4 +34,5 @@
     <div class="total">{{ total | currency:'USD':true }}</div>
     <a md-raised-button>CHECKOUT</a>
   </div>
+
 </div>
