--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,11 @@
     <img class="logo" src="assets/ngshop-logo.svg" alt="NgShop Logo">
   </a>
   <span class="fill"></span>
+  <a md-icon-button class="ngs-badge"
+                    routerLink="/cart"
+                    [attr.data-badge]="cartTotalQuantity">
+    <md-icon>shopping_cart</md-icon>
+  </a>
 </md-toolbar>
 
 <router-outlet></router-outlet>
