Add checkout page

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -32,7 +32,7 @@
   <div class="cart-actions">
     Total:
     <div class="total">{{ total | currency:'USD':true }}</div>
-    <a md-raised-button>CHECKOUT</a>
+    <a md-raised-button routerLink="/checkout">CHECKOUT</a>
   </div>
 
 </div>
